# fun_algorithmic_problems

./: L33tcode_problems.ipynb  README.md  pyproject.toml
Wordcount-Agility-Kata/: README.md  anafabmar.ipynb
Wordcount-Agility-Kata/code/: mytext.txt  wordcount.py
Wordcount-Agility-Kata/iterations/iteration_1/: README.md
leetcode_easy/: easy.ipynb  easy_problems.ipynb  sliding_window.ipynb  stack.ipynb  trees.ipynb
leetcode_hard/: sliding_window.ipynb  stack.ipynb
leetcode_medium/: backtracking.ipynb  dynamic_programming.ipynb  graphs.ipynb  medium.ipynb  sliding_window.ipynb  sliding_windows.ipynb  stack.ipynb  trees.ipynb
